--- a/ecomdashboard/src/main/resources/templates/dashboard.html
+++ b/ecomdashboard/src/main/resources/templates/dashboard.html
@@ -183,6 +183,8 @@
         <div class="container">
             <div class="text-center">
                 <small>Copyright © Your Website 2018</small>
+                <span sec:authorize="isAuthenticated()" style="display: inline-block;">
+                </span>
             </div>
         </div>
     </footer>
